Separate dependabot for Microsoft.ApplicationInsights.WorkerService

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -32,6 +32,8 @@ updates:
       api:
         patterns:
           - "*"
+        exclude-patterns:
+          - "Microsoft.ApplicationInsights.WorkerService"
           
   - package-ecosystem: "npm"
     directory: "/src/Client"
