--- a/src/Client/jsconfig.json
+++ b/src/Client/jsconfig.json
@@ -11,7 +11,7 @@
     "allowJs": true,
     "checkJs": true,
     "strict": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "rootDir": ".",
     "paths": {
