Direct upload of swa config

--- a/.github/workflows/reusable-build-test-deploy.yml
+++ b/.github/workflows/reusable-build-test-deploy.yml
@@ -89,8 +89,8 @@ jobs:
       - name: Upload Config
         uses: actions/upload-artifact@v7
         with:
-          name: config
           path: ${{ env.SRC_DIR }}/${{ env.PUBLISH_DIR }}/staticwebapp.config.json
+          archive: false
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v7
@@ -106,7 +106,7 @@ jobs:
       - name: Download Config
         uses: actions/download-artifact@v8
         with:
-          name: config
+          name: staticwebapp.config.json
           path: ${{ github.workspace }}/artifacts/config
 
       - name: Download Api
