--- a/.github/workflows/pull-request-closed.yml
+++ b/.github/workflows/pull-request-closed.yml
@@ -1,7 +1,9 @@
 name: Pull Request - Closed
 
+# use the same concurrency group as pull-request.yml
+# to force Closed to run after currently running actions are finished
 concurrency:
-  group: pull-request-closed-${{ github.ref }}
+  group: pull-request-${{ github.ref }}
   cancel-in-progress: false
 
 on:
